--- a/note-list/index.html
+++ b/note-list/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <link href="theme.css" rel="stylesheet">
+    <link href="../theme.css" rel="stylesheet">
     <title>Vue note list</title>
 </head>
 <body>
